# tradai-platform

./: .env  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  .prepare-commit-msg.py  .watch.yaml  ARCHITECTURE.md  CODE_STYLE.md  Cargo.toml  LICENSE  Makefile  README.md  ROCKSDB.md  build.rs  config.toml.sample  config_release.toml  criterion.toml  docker-compose.yaml  infra.mk  keys_real_test.json  requirements.txt  rr_gdbinit
backtest/: Cargo.toml  backtest_kl_single.yaml  backtest_mr.yaml  backtest_mr_1inchdown.yaml  backtest_mr_all.yaml  backtest_mr_bake.yaml  backtest_mr_btc.yaml  backtest_mr_single.yaml  backtest_mr_single_py.yaml
backtest/src/: backtest.rs  config.rs  data_server.rs  datafusion_util.rs  dataset.rs  error.rs  lib.rs  main.rs  report.rs  runner.rs
backtest/src/datasources/: avro_orderbook.rs  csv_orderbook.rs  mod.rs  orderbook.rs  trades.rs
backtest/src/report/: global.rs  logger.rs  mod.rs  registry.rs  single.rs
backtest_cli/: Cargo.toml  backtest_kl_single.yaml  backtest_kl_single_rust.yaml  backtest_mr_single.yaml  backtest_stoch_single.yaml
backtest_cli/src/: data_server.rs  main.rs
broker/: Cargo.toml  README.md
broker/core/: Cargo.toml  keys_real_test.json
broker/core/benches/: broker.rs
broker/core/src/: account_metrics.rs  api.rs  bot.rs  broker.rs  brokerages.rs  credential.rs  currency.rs  error.rs  exchange.rs  fees.rs  json_util.rs  lib.rs  manager.rs  margin_interest_rates.rs  metrics.rs  metrics_util.rs  pair.rs  plugin.rs  settings.rs  streaming_api.rs  url_util.rs  util.rs
broker/examples/: generic_api.rs  simple.rs  streaming.rs
broker/impls/binance/: Cargo.toml
broker/impls/bitstamp/: Cargo.toml
broker/impls/bittrex/: Cargo.toml
broker/impls/coinbase/: Cargo.toml
broker/impls/kraken/: Cargo.toml
broker/impls/poloniex/: Cargo.toml
broker/src/: lib.rs  main.rs
broker_test_util/: Cargo.toml
broker_test_util/src/: binance.rs  http.rs  lib.rs
coinnect_test_util/: Cargo.toml
coinnect_test_util/src/: binance.rs  lib.rs
config/: dev.yaml  (+15 more)
db/: Cargo.toml
db/migrations/2021-09-09-075429_create_orders/: up.sql
db/src/: error.rs  lib.rs  main.rs
db/src/storage/: mem.rs  mod.rs  repo.rs  rkv.rs  rocksdb.rs
logging/: Cargo.toml  build.rs
logging/schemas/: livefeeds.idl
logging/src/: lib.rs  market_event.rs
logging/src/avro_gen/: models.rs
logging/src/file/: file_actor.rs  metrics.rs  mod.rs  rotate.rs
math/: Cargo.toml
math/src/: error.rs  iter.rs  lib.rs  moving_average.rs
math/src/indicators/: ema.rs  macd_apo.rs
metrics/: Cargo.toml
metrics/src/: error.rs  lib.rs  store.rs
metrics/src/prom/: mod.rs  push.rs
models/: Cargo.toml  build.rs
models/src/: lib.rs
models/src/avro_gen/: models.rs
portfolio/: Cargo.toml
portfolio/src/: balance.rs  error.rs  lib.rs  margin.rs  portfolio.rs  risk.rs  test_util.rs  wallet.rs
python/macros/: Cargo.toml
python/macros/src/: embed_python.rs  error.rs  lib.rs  run.rs
python_crate/: Cargo.toml
python_crate/python_scripts/: calls.py  unimplemented.py
python_crate/src/: asyncio.rs  backtest.rs  brokerage.rs  candle.rs  channel.rs  db.rs  error.rs  json_cannonical.rs  lib.rs  model.rs  py_strat.rs  pyarrow.rs  script_strat.rs  ta.rs  test_util.rs  trading.rs  util.rs  uuid.rs  windowed_ta.rs
python_dylib/: Cargo.toml  Dockerfile  README.md  pyproject.toml
python_dylib/python_src/strategy/: __init__.py  backtest.py  model.py  ta.py
python_dylib/python_src/tradai/: __init__.py  backtest.py  model.py  ta.py  util.py
python_dylib/src/: lib.rs
server/: Cargo.toml  build.rs
server/examples/: plotilb.rs
server/schemas/: livefeeds.idl
server/src/: connectivity.rs  feeder.rs  lib.rs  main.rs  nats.rs  runner.rs  server.rs  settings.rs  system.rs
server/src/api/: graphql.rs  mod.rs  playground_source.rs
server/src/db/: mod.rs
server/src/graphql_schemas/: context.rs  mod.rs  root.rs  types.rs
server/src/logging/: file_actor.rs  live_event.rs  metrics.rs  mod.rs  rotate.rs
server/src/notify/: mod.rs
server/src/system/: bots.rs  mod.rs
server/src/util/: date.rs  s3.rs
stats/: Cargo.toml
stats/benches/: quantile_peroxide.rs
stats/src/: dispersion.rs  iter.rs  kline.rs  lib.rs
stats/src/indicators/: cross.rs  drawdown.rs  ema.rs  macd_apo.rs  mod.rs  momentum.rs  ppo.rs  ppo_yata.rs  ratio.rs  thresholds.rs
stats/src/math/: mod.rs  welford.rs
stats/src/summary/: data.rs  drawdown.rs  mod.rs  pnl.rs  tradings.rs
strategies/: Cargo.toml  diesel.toml  trader.db
strategies/examples/: plotters.rs
strategies/py/: kline_logger.py  mean_reverting.py  test_ta_lib.py
strategies/python_scripts/: calls.py  unimplemented.py
strategies/src/: actor.rs  backtester.rs  driver.rs  error.rs  event.rs  input.rs  lib.rs  main.rs  model.rs  ob_double_window_model.rs  ob_indicator_model.rs  ob_linear_model.rs  om_tool.rs  order_manager.rs  order_repository.rs  order_types.rs  query.rs  repair_order_details.rs  repos.rs  settings.rs  sql_schema.rs  test_util.rs  trading.rs  trading_util.rs  types.rs  util.rs  wal.rs
strategies/tests/: mean_reverting_backtest.rs
strategy/: Cargo.toml
strategy/python_scripts/: calls.py  unimplemented.py
strategy/src/: actor.rs  driver.rs  error.rs  event.rs  lib.rs  plugin.rs  plugin_flag.rs  query.rs  settings.rs  test_util.rs  types.rs
strategy_python/: Cargo.toml
strategy_python/examples/: pyo3_async.rs
strategy_python/python_scripts/: calls.py
strategy_python/src/: backtest.rs  channel.rs  coinnect.rs  error.rs  lib.rs  model.rs  py_strat.rs  script_strat.rs  ta.rs  test_util.rs  trading.rs  util.rs  uuid.rs
strategy_test_util/: Cargo.toml
strategy_test_util/plots/: prices.gp
strategy_test_util/src/: draw.rs  event.rs  fs.rs  input.rs  it_backtest.rs  lib.rs  log.rs  plugin.rs
trading/: Cargo.toml
trading/src/: book.rs  engine.rs  error.rs  interest.rs  lib.rs  om_tool.rs  position.rs  signal.rs  stop.rs  test_util.rs  types.rs
util/: Cargo.toml
util/src/: compress.rs  date.rs  lib.rs  log.rs  s3.rs  test.rs  time.rs  trace.rs  tracing.rs
(+304 files in other folders)
