cargo-features = ["named-profiles"]

[workspace]

members = [
    "broker",
    "broker_test_util",
    "db",
    "ext",
    "stats",
    "logging",
    "portfolio",
    "metrics",
    "server",
    "strategy",
    "python_crate",
    "strategies",
    "util",
    "backtest",
    "backtest_cli",
    "trading",
]

exclude = [
    "python_dylib"
]

[profile.test]
debug = true
opt-level = 0

[profile.dev]
opt-level = 1
debug = true
#lto = "thin"

[profile.dev-noinc]
inherits = "dev"
incremental = false

[profile.release]
opt-level = 3
debug = false
lto = "thin"

[profile.release-fat]
inherits = "release"
lto = "fat"

[profile.release-debug]
inherits = "release"
debug = true
lto = false

[patch.crates-io]
#pyo3 = { git = "https://github.com/PyO3/pyo3", rev = "8a989eeb6aeb862c0c518d994ef6e5f967f0dc46", version = "^0.15" }
pyo3 = { git = "https://github.com/aviramha/pyo3.git", rev = "db53229bc7a737d0300ff2c5fbc7ea80040ec263", version = "^0.15" }
pythonize = { git = "https://github.com/Igosuki/pythonize", rev = "d5309ca6491cdfb9e356d38b244e20b29a206bbc", version = "^0.15" }
# datafusion
#datafusion = { git = "https://github.com/apache/arrow-datafusion", branch = "master" }
#ballista = { git = "https://github.com/apache/arrow-datafusion", branch = "master" }
datafusion = { git = "https://github.com/Igosuki/arrow-datafusion", branch = "arrow2_i" }
ballista = { git = "https://github.com/Igosuki/arrow-datafusion", branch = "arrow2_i" }
#datafusion = { path = "/media/geps/work/dev/oss/arrow-datafusion/datafusion" }
#ballista = { path = "/media/geps/work/dev/oss/arrow-datafusion/ballista/rust/client" }
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "dded624dc6a6347d7e937efee7779a44a51c4edb" }
inventory = { git = "https://github.com/Igosuki/inventory.git" }
