[package]
name = "backtest"
version = "0.1.0"
edition = "2021"

[lib]
name = "backtest"
path = "src/lib.rs"

[features]
default = ["mock_time"]
mock_time = ["util/mock_time"]
release_max_level_debug = ["util/release_max_level_debug", "tracing/release_max_level_debug"]
release_max_level_trace = ["util/release_max_level_trace", "tracing/release_max_level_trace"]
#remote_execution = ["ballista"]
#standalone_execution = ["ballista", "ballista/standalone"]

[dependencies]
# trader
strategy = { path = "../strategy" }
brokers = { path = "../broker" }
util = { path = "../util" }
ext = { path = "../ext" }
db = { path = "../db" }
stats = { path = "../stats" }
trading = { path = "../trading", features = ["test_util"] }

# async
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
pyo3-asyncio = { version = "0.15", features = ["attributes", "tokio-runtime"] }
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }

# actors
actix = "0.12"
actix-rt = "2.6"

# config
config = { version = "0.11", features = ["yaml", "toml", "json"], default-features = false }

# logging / monitoring / metrics
tracing = { version = "0.1", features = ["log"] }

# std
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parse_duration = "2.1"
env_logger = { version = "0.9" }
typed-builder = "0.9"
itertools = "0.10"
hdrhistogram = "7.4"
dashmap = "5"
float-cmp = "0.9"
num_cpus = "1.13"

# datafusion
datafusion = { git = "https://github.com/Igosuki/arrow-datafusion", branch = "arrow2_i", features = ["avro", "avro-schema", "crypto_expressions", "regex_expressions", "unicode_expressions"] }
#datafusion = { git = "https://github.com/Igosuki/arrow-datafusion", branch = "fix_dict_key_size", features = ["avro", "crypto_expressions", "regex_expressions", "unicode_expressions"]}
#ballista = { version = "0.6.0", optional = true }

# reporting
plotly = { version = "0.7" }
