[package]
name = "backtest"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "backtest"
path = "src/lib.rs"

[features]
default = ["mock_time"]
mock_time = ["util/mock_time"]
release_max_level_debug = ["util/release_max_level_debug", "tracing/release_max_level_debug"]
release_max_level_trace = ["util/release_max_level_trace", "tracing/release_max_level_trace"]
#remote_execution = ["ballista"]
#standalone_execution = ["ballista"]
#parquet_report = ["polars"]

[dependencies]
# trader
strategy = { path = "../strategy" }
brokers = { path = "../broker" }
util = { path = "../util" }
ext = { path = "../ext" }
db = { path = "../db" }
stats = { path = "../stats" }
trading = { path = "../trading", features = ["test_util"] }

# async
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true, features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }

# actors
actix = { workspace = true }
actix-rt = { workspace = true }

# config
config = { workspace = true }

# logging / monitoring / metrics
tracing = { workspace = true }

# std
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
typed-builder = { workspace = true }
itertools = { workspace = true }
hdrhistogram = { workspace = true }
dashmap = { workspace = true }
float-cmp = { workspace = true }
num_cpus = "1.13"
strum = { workspace = true }
strum_macros = { workspace = true }
once_cell = { workspace = true }
multimap = { workspace = true }

# datafusion
datafusion = { version = "^24.0.0", features = ["avro", "crypto_expressions", "regex_expressions", "unicode_expressions", "dictionary_expressions"] }
#ballista = { version = "0.11.0", optional = true }

# reporting
plotly = { workspace = true }

#polars = { version = "0.19", optional = true, default-features = false, features = ["docs", "zip_with", "temporal", "performant", "dtype-full", "plain_fmt", "object", "lazy", "strings", "serde", "parquet", "json"]}
