[package]
name = "backtest_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backtest"
path = "src/main.rs"
required-features = ["python", "strats_backtests"]

[[bin]]
name = "backtest_data_server"
path = "src/data_server.rs"

[features]
default = ["release_max_level_trace"]
release_max_level_debug = ["backtest/release_max_level_debug"]
release_max_level_trace = ["backtest/release_max_level_trace"]
console = ["util/console_tracing"]
python  = ["tradai_python"]
strats_backtests = ["strategies/backtests"]

[dependencies]
backtest = { path = "../backtest", features = ["mock_time"] }
strategies = { path = "../strategies" }
tradai_python = { path = "../python_crate", optional = true }
util = { path = "../util" }

# actors
actix = "0.13"

# std
anyhow = "1.0"
typed-builder = "0.10"

# cli
structopt = { version = "0.3" }
config = "0.12"

# logging / monitoring / metrics
tracing = { version = "0.1", features = ["log"] }

# async
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# serde
serde = { version = "1.0", features = ["derive"] }


