[package]
name = "backtest_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "backtest"
path = "src/main.rs"
required-features = ["python", "strats_backtests"]

[[bin]]
name = "backtest_data_server"
path = "src/data_server.rs"

[features]
default = ["release_max_level_trace"]
release_max_level_debug = ["backtest/release_max_level_debug"]
release_max_level_trace = ["backtest/release_max_level_trace"]
console = ["util/console_tracing"]
python  = ["tradai_python"]
strats_backtests = ["strategies/backtests"]

[dependencies]
backtest = { path = "../backtest", features = ["mock_time"] }
strategies = { path = "../strategies" }
tradai_python = { path = "../python_crate", optional = true }
util = { path = "../util" }

# actors
actix = { workspace = true }

# std
anyhow = { workspace = true }
typed-builder = { workspace = true }

# cli
structopt = { workspace = true }
config = { workspace = true }

# logging / monitoring / metrics
tracing = { workspace = true }

# async
futures = { workspace = true }
tokio = { workspace = true }

# serde
serde = { workspace = true }


