[package]
name = "broker_test_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-http = { version = "3.0.0-rc", features = ["ws"] }
actix-http-test = "3.0.0-beta"
actix-codec = "0.5"

# Local
brokers = { path = "../broker", features = ["test_util"] }
binance-rs-async = { version = "1.1.4" }

# Mock
httpmock = { version = "0.6", default-features = false }

# Std
rand = "0.8"
bytestring = "1.0"
chrono = "0.4"

# Async
futures = "0.3"
