[package]
name = "broker_test_util"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-http = { workspace = true }
actix-http-test = { workspace = true }
actix-codec = { workspace = true }

# Local
brokers = { path = "../broker", features = ["test_util"] }
binance-rs-async = { workspace = true }

# Mock
httpmock = { workspace = true, default-features = false }

# Std
rand = { workspace = true }
bytestring = { workspace = true }
chrono = { workspace = true }

# Async
futures = { workspace = true }
