[package]
name = "broker_test_util"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-http = "3.3.1"
actix-http-test = "3.1.0"
actix-codec = "0.5.1"

# Local
brokers = { path = "../broker", features = ["test_util"] }
binance-rs-async = "1.3.2"

# Mock
httpmock = "0.6.7"

# Std
rand = "0.8.5"
bytestring = "1.3.0"
chrono = "0.4.24"

# Async
futures = "0.3.28"
