[package]
name = "coinnect_test_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coinnect_rt = {path="../coinnect"}
binance-rs-async = {version = "1.1.4"}
httpmock = { git = "https://github.com/Igosuki/httpmock.git" }
rand = "0.8"
futures = "0.3"
actix-http = "3.0.0-beta.12"
bytestring = "1.0"
chrono = "0.4"
actix-http-test = "3.0.0-beta.6"
actix-codec = "0.4"
