[package]
name = "coinnect_test_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-http = "3.0.0-beta.17"
actix-http-test = "3.0.0-beta.10"
actix-codec = "0.4"

# Local
coinnect_rt = { path = "../coinnect" }
binance-rs-async = { version = "1.1.4" }

# Mock
httpmock = { git = "https://github.com/Igosuki/httpmock.git" }

# Std
rand = "0.8"
bytestring = "1.0"
chrono = "0.4"

# Async
futures = "0.3"
