[package]
name = "db"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"

[[bin]]
name = "db_tool"
path = "src/main.rs"
required-features = ["structopt"]
[lib]
name = "db"
path = "src/lib.rs"

[features]
default = []
rocksdb-static = ["rocksdb/static"]
rocksdb-vendor = ["rocksdb/vendor"]
rkv-lmdb = ["rkv", "lmdb-rkv", "tracing"]

[dependencies]
# trader
ext = { path = "../ext" }

# cli
structopt = { version = "0.3", optional = true }

# std
thiserror = "1.0"
bincode = "1.3"
itertools = "0.10"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version ="0.1", features = ["release_max_level_debug", "log"], optional=true }

# databases
lmdb-rkv = { version = "0.14", optional = true }
rkv = { version = "0.17", optional = true }
rocksdb = { git = "https://github.com/Igosuki/rust-rocksdb.git", branch = "librocksdb-sys-link", features = ["multi-threaded-cf", "pkg-config", "snappy", "lz4", "zstd", "zlib", "bzip2"], default-features = false }
# Flatdata is write once read many and fast memory mapping a structured file
#flatdata = "0.5"

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "0.7"
rand = "0.8"
tempdir = "0.3"
util = { path = "../util" }
chrono = "0.4"
measure_time = "0.7"
