[package]
name = "db"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"

[[bin]]
name = "db_tool"
path = "src/main.rs"
required-features = ["structopt"]
[lib]
name = "db"
path = "src/lib.rs"

[features]
default = ["io_rkyv"]
#rocksdb-static = ["rocksdb/static"]
rocksdb-vendor = []
rkv = ["dep:rkv", "lmdb-rkv", "tracing"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
release_default = ["structopt"]
io_rkyv = ["rkyv", "rkyv_dyn", "rkyv_typename", "rkyv/bytecheck", "bytecheck", "rkyv/validation"]

[dependencies]
# trader
ext = { path = "../ext" }

# cli
structopt = { version = "0.3", optional = true }

# std
thiserror = "1.0"
bincode = "1.3"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
erased-serde = { version = "0.3" }
tracing = { version ="0.1", features = ["log"], optional=true }
anyhow = "1.0"

# codec
serde_json = { version = "1.0", features = ["float_roundtrip"] }
rkyv = { version = "0.7", features = ["smallvec", "uuid"], optional = true }
rkyv_dyn = { version = "0.7", optional = true }
rkyv_typename = { version = "0.7", optional = true }
bytecheck = { version = "0.6", optional = true }

# databases
lmdb-rkv = { version = "0.14", optional = true }
rkv = { version = "0.17", optional = true }
rocksdb = { version = "0.18", features = ["multi-threaded-cf", "lz4", "zstd"] }
# Flatdata is write once read many and fast memory mapping a structured file
#flatdata = "0.5"

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
tempdir = "0.3"
util = { path = "../util" }
chrono = "0.4"
measure_time = "0.8"
