[package]
name = "db"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "db_tool"
path = "src/main.rs"
required-features = ["structopt"]
[lib]
name = "db"
path = "src/lib.rs"

[features]
default = ["io_rkyv"]
#rocksdb-static = ["rocksdb/static"]
rocksdb-vendor = []
rkv = ["dep:rkv", "lmdb-rkv", "tracing"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
release_default = ["structopt"]
io_rkyv = ["rkyv", "rkyv_dyn", "rkyv_typename", "rkyv/bytecheck", "bytecheck", "rkyv/validation"]

[dependencies]
# trader
ext = { path = "../ext" }

# cli
structopt = { workspace = true, optional = true }

# std
thiserror = { workspace = true }
bincode = "1.3"
itertools = { workspace = true }
serde = { workspace = true }
erased-serde = { workspace = true }
tracing = { workspace = true, optional = true }
anyhow = { workspace = true }

# codec
serde_json = { workspace = true }
rkyv = { version = "0.7", features = ["smallvec", "uuid"], optional = true }
rkyv_dyn = { version = "0.7", optional = true }
rkyv_typename = { version = "0.7", optional = true }
bytecheck = { version = "0.6", optional = true }

# databases
lmdb-rkv = { version = "0.14", optional = true }
rkv = { version = "0.18", optional = true }
rocksdb = { version = "0.19", features = ["serde1", "multi-threaded-cf", "lz4", "zstd"] }
# Flatdata is write once read many and fast memory mapping a structured file
#flatdata = "0.5"

[dev-dependencies]
env_logger = { workspace = true }
rand = { workspace = true }
tempdir = { workspace = true }
util = { path = "../util" }
chrono = { workspace = true }
measure_time = { workspace = true }
