[package]
name = "logging"
version.workspace = true
authors.workspace = true
edition.workspace = true

build = "build.rs"

[lib]
name = "logging"
path = "src/lib.rs"

[features]
flame = ["dep:flame", "flamer"]

[dependencies]
# self
brokers = { path = "../broker" }

# Actix
actix = { workspace = true }

# Std
chrono = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

# Error
thiserror = { workspace = true }
anyhow = { workspace = true }

# Codecs
avro-rs = { git = "https://github.com/Igosuki/avro-rs.git", branch = "update_deps" }
serde_json = { workspace = true }

# derive
serde = { workspace = true }
derive_more = { workspace = true }

# Logging / Monitoring / Tracing
prometheus = { workspace = true }
tracing = { workspace = true }

# Profiling
flame = { workspace = true, optional = true }
flamer = { workspace = true, optional = true }

[dev-dependencies]
fs_extra = "1.2"
env_logger = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true }
[build-dependencies]
crc32fast = "1.2"
rsgen-avro = { git = "https://github.com/Igosuki/rsgen-avro.git", branch = "update_deps" }
serde_json = { workspace = true }

