[package]
name = "math"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"

# Math
num-traits = "0.2.11"
#streaming-stats = "0.2.3"
#average = "0.10.4"
#nalgebra = "0.21.0"
