[package]
name = "math"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"
#streaming-stats = "0.2.3"#average = "0.10.4"
#nalgebra = "0.21.0"

# Optional dependencies to be used later
# tensorflow = "0.16"

# Log
log = "0.4"

# Math
num-traits = "0.2"
peroxide = "0.30"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tracing = "0.1"
ta = { version = "0.5", features = ["serde"] }

[dev-dependencies]
float-cmp = "0.9"
rand = "0.8"
