[package]
name = "metrics"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
zstd = ["awc/compress-zstd"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
prometheus = { version = "0.13", features = ["nightly", "push", "process", "gen"] }
actix = "0.12"
awc = { version = "3.0.0-beta", features = ["openssl", "compress-brotli", "compress-gzip", "cookies"], default-features = false }
thiserror = "1.0"
lazy_static = "1.4"
tracing = { version = "0.1", features = ["log"] }
serde = "1.0"
libc = "0.2"
actix-http = { version = "3.0.0-rc", features = ["ws"] }
protobuf = "2.12"
tokio = "1"

[dev-dependencies]
