[package]
name = "metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
zstd = ["awc/compress-zstd"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
prometheus = { workspace = true, features = ["nightly", "push", "process", "gen"] }
actix = { workspace = true }
awc = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
libc = { workspace = true }
actix-http = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
