[package]
name = "models"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[lib]
name = "models"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
lazy_static = "1.4"
avro-rs = { git = "https://github.com/Igosuki/avro-rs.git" }

[build-dependencies]

# Codecs
rsgen-avro = { git = "https://github.com/Igosuki/rsgen-avro.git" }
crc32fast = "1.2.0"
serde_json = "1.0.0"
