[package]
name = "models"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[lib]
name = "models"
path = "src/lib.rs"

[dependencies]
avro-rs = { git = "https://github.com/Igosuki/avro-rs.git", branch = "master_merge" }
lazy_static = "1.4"
serde = "1.0"

[build-dependencies]
crc32fast = "1.2"

# Codecs
rsgen-avro = { git = "https://github.com/Igosuki/rsgen-avro.git", branch = "master_merge" }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
