[package]
name = "account"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"

[lib]
name = "portfolio"
path = "src/lib.rs"

[features]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
brokers = { path = "../broker" }
trading = { path = "../trading" }
util = { path = "../util" }
db = { path = "../db" }
ext = { path = "../ext" }

# actix
actix = "0.13"
actix_derive = "0.6"

# metrics
prometheus = "0.13"
tracing = { version = "0.1", features = ["log"] }

# std
thiserror = "1.0"
serde = "1.0"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.0.0-alpha", features = ["v4", "fast-rng", "serde"] }
itertools = "0.10"

# async
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2"
tokio = { version = "1", features = ["full"] }
float-cmp = "0.9"
