[package]
name = "account"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "portfolio"
path = "src/lib.rs"

[features]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
brokers = { path = "../broker" }
trading = { path = "../trading" }
util = { path = "../util" }
db = { path = "../db" }
ext = { path = "../ext" }

# actix
actix = { workspace = true }
actix_derive = { workspace = true }

# metrics
prometheus = { workspace = true }
tracing = { workspace = true }

#serde
serde = { workspace = true }
# error
thiserror = { workspace = true }
anyhow = { workspace = true }
#std
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
itertools = { workspace = true }

# async
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = "0.2"
float-cmp = { workspace = true }
